# Melodix

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  cache.rs  files.rs  metadata.rs  mod.rs  scanner.rs
src-tauri/src/formats/: flac.rs  mod.rs  mp3.rs  wav.rs
src/components/: AddToPlaylist.tsx  BulkEditor.tsx  ConflictModal.tsx  CoverArt.tsx  DailyMixModal.tsx  Editor.tsx  EffectsPanel.tsx  EqPanel.tsx  FetchProgress.tsx  GlobalSearch.tsx  LazyCover.tsx  Library.tsx  NowPlaying.tsx  OrganizeModal.tsx  Player.tsx  QueuePanel.tsx  Sidebar.tsx  Toolbar.tsx  WaveSeekBar.tsx
src/hooks/: useKeyboardShortcuts.ts  useTheme.ts  useThemeLabels.ts
src/lib/: coverQueue.ts
src/pages/: GenrePage.tsx  Home.tsx  Library.tsx  Likes.tsx  PlayerPage.tsx  PlaylistPage.tsx  Settings.tsx  StatsPage.tsx
src/services/: autoFetch.ts  fileOps.ts  itunes.ts  lyrics.ts
src/store/: index.ts
src/themes/: config.ts  defs.ts  index.ts  labels.ts
src/types/: index.ts
src/utils/: lrcParser.ts
