[package]
name = "melodix"
version = "0.3.0-beta.3"
description = "Melodix – Modern Audio Metadata Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "melodix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
metaflac = "0.2"
id3 = { version = "1", features = ["default"] }
base64 = "0.22"
walkdir = "2"
thiserror = "2"
rodio = { version = "0.20", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", default-features = false }
souvlaki = "0.7"
